--- a/scss/main.scss
+++ b/scss/main.scss
@@ -22,3 +22,9 @@
 @import './layouts/servives.scss';
 @import './layouts/footer';
 
+//Mobile
+@import './mobile/index';
+
+//Tablet
+@import './tablet/index';
+
