--- a/scss/base/_common.scss
+++ b/scss/base/_common.scss
@@ -1,20 +1,56 @@
 .section {
-    padding: 94px 0;
+        padding-top: 60px;
+        padding-bottom: 60px;
+    
+
+    @include mq(tablet) {
+        padding-top: 60px;
+        padding-bottom: 60px;
+    }
+
+    @include mq(desktop) {
+        padding-top: 94px;
+        padding-bottom: 94px;
+    }
 }
+
 
 .section.team {
     background-color: var(--secondary-bg-color);
 }
 
 .container {
-    display: block;
-    align-items: center;
-
-    width: 1200px;
     padding-left: 15px;
     padding-right: 15px;
     margin-left: auto;
     margin-right: auto;
+
+@media screen and (min-width: 480px) {
+    width: 480px;
+}
+
+@include mq(mobile) {
+    width: 480px;
+}
+
+@media screen and (min-width: 768px) {
+    width: 768px;
+}
+
+@include mq(tablet) {
+    width: 768px;
+}
+
+@media screen and (min-width: 1200px) {
+    width: 1200px;
+}
+
+@include mq(desktop) {
+    width: 1200px;
+}
+
+    //display: block;
+    //align-items: center;
 }
 
 .header__container,
