--- a/scss/main.scss
+++ b/scss/main.scss
@@ -1,6 +1,7 @@
 // utils
 @import './utils/vaiables';
 @import './utils/visually-hidden';
+@import './utils/mixins';
 
 // base styles
 @import './base/reset';
