--- a/scss/layouts/_features.scss
+++ b/scss/layouts/_features.scss
@@ -1,64 +1,74 @@
 /*Секція Features*/
 
 .feature__list {
-    @include mq(tablet) {
+  @include mq(tablet) {
     display: flex;
     flex-wrap: wrap;
-    }
+    justify-content: center;
+    margin: 0 -15px;
+  }
 }
 
 .feature__item {
-    list-style: none;
- 
-    @include mq(tablet) {
-    margin-right: 30px;}
+  list-style: none;
 
-    &:last-child {
-    margin-right: 0;
+  @include mq(tablet) {
+    margin-right: 30px;
+
+    &:nth-child(2n) {
+      margin-right: 0px;
     }
+  }
 
-         @include mq(mobile) {
-             width: 450px;
-         }
-    
-         @include mq(tablet) {
-             display: flex;
-             width: 354px;
-         }
-    
-         @include mq(desktop) {
-             display: flex;
-             width: 270px;
-         }
+  @include mq(mobile) {
+    width: 450px;
+    margin-bottom: 30px;
+  }
+
+  @include mq(tablet) {
+    width: 354px;
+    flex-basis: calc((100% - 2 * 30px) / 2);
+  }
+
+  @include mq(desktop) {
+    width: 270px;
+    flex-basis: calc((100% - 3 * 30px) / 4);
+    margin-bottom: 0;
+  }
 }
 
 .feature-block {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  background-color: var(--secondary-bg-color);
+  background-position: center;
 
-    align-items: center;
-    justify-content: center;
-    background-color: var(--secondary-bg-color);
-    background-position: center;
-    margin-bottom: 30px;
-
+  margin-bottom: 30px;
 }
 
 .feature__title {
-    font-weight: 700;
-    font-size: 14px;
-    line-height: 1.14;
-    letter-spacing: 0.03em;
-    text-transform: uppercase;
-    margin-bottom: 10px;
+  @include mq(mobile-only) {
+    display: flex;
+    justify-content: center;
+  }
 
-    color: var(--main-txt-cl);
+  font-weight: 700;
+  font-size: 14px;
+  line-height: 1.14;
+  letter-spacing: 0.03em;
+  text-transform: uppercase;
+  margin-bottom: 10px;
+
+  color: var(--main-txt-cl);
 }
 
 .feature__description {
-    font-weight: 400;
-    font-size: 14px;
-    line-height: 1.71;
-    letter-spacing: 0.03em;
-    text-transform: none;
+  font-weight: 400;
+  font-size: 14px;
+  line-height: 1.71;
+  letter-spacing: 0.03em;
+  text-transform: none;
 
-    color: var(--secondary-txt-cl);
+  color: var(--secondary-txt-cl);
 }
