--- a/css/main.css
+++ b/css/main.css
@@ -57,22 +57,21 @@ ul {
   list-style: none;
 }
 
-.section {
-  padding-top: 60px;
-  padding-bottom: 60px;
+@media screen and (min-width: 480px) {
+  .section {
+    padding-top: 60px;
+  }
 }
 
 @media screen and (min-width: 768px) {
   .section {
     padding-top: 60px;
-    padding-bottom: 60px;
   }
 }
 
 @media screen and (min-width: 1200px) {
   .section {
     padding-top: 94px;
-    padding-bottom: 94px;
   }
 }
 
@@ -891,7 +890,13 @@ footer {
 @media screen and (min-width: 768px) {
   .feature__item {
     margin-right: 30px;
+    width: 354px;
+    -ms-flex-preferred-size: calc((100% - 2 * 30px) / 2);
+        flex-basis: calc((100% - 2 * 30px) / 2);
   }
+}
+
+@media screen and (min-width: 768px) and (max-width: 1199.98px) {
   .feature__item:nth-child(2n) {
     margin-right: 0px;
   }
@@ -904,20 +909,15 @@ footer {
   }
 }
 
-@media screen and (min-width: 768px) {
-  .feature__item {
-    width: 354px;
-    -ms-flex-preferred-size: calc((100% - 2 * 30px) / 2);
-        flex-basis: calc((100% - 2 * 30px) / 2);
-  }
-}
-
 @media screen and (min-width: 1200px) {
   .feature__item {
     width: 270px;
-    -ms-flex-preferred-size: calc((100% - 3 * 30px) / 4);
-        flex-basis: calc((100% - 3 * 30px) / 4);
+    -ms-flex-preferred-size: calc((100% - 4 * 30px) / 4);
+        flex-basis: calc((100% - 4 * 30px) / 4);
     margin-bottom: 0;
+  }
+  .feature__item:last-child {
+    margin-right: 0;
   }
 }
 
@@ -967,10 +967,6 @@ footer {
 }
 
 /*Секція Product*/
-.product {
-  padding-top: 0;
-}
-
 .product__title {
   font-weight: 700;
   font-size: 36px;
@@ -1055,8 +1051,6 @@ footer {
 }
 
 .team-member__item {
-  width: 270px;
-  margin-right: 30px;
   -webkit-box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 1px 1px rgba(0, 0, 0, 0.14), 0px 2px 1px rgba(0, 0, 0, 0.2);
           box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 1px 1px rgba(0, 0, 0, 0.14), 0px 2px 1px rgba(0, 0, 0, 0.2);
   border-radius: 0px 0px 4px 4px;
@@ -1064,8 +1058,47 @@ footer {
   list-style: none;
 }
 
-.team-member__item:nth-child(2n) {
+@media screen and (min-width: 480px) {
+  .team-member__item {
+    margin-bottom: 30px;
+  }
+}
+
+@media screen and (min-width: 768px) {
+  .team-member__item {
+    margin-right: 30px;
+  }
+  .team-member__item:nth-child(2n) {
+    margin-right: 0;
+  }
+}
+
+@media screen and (min-width: 1200px) {
+  .team-member__item {
+    margin-right: 30px;
+  }
+}
+
+.team-member__item:last-child {
   margin-right: 0px;
+}
+
+@media screen and (min-width: 480px) {
+  .team-member__item {
+    width: 450px;
+  }
+}
+
+@media screen and (min-width: 768px) {
+  .team-member__item {
+    width: 354px;
+  }
+}
+
+@media screen and (min-width: 1200px) {
+  .team-member__item {
+    width: 270px;
+  }
 }
 
 .member {
@@ -1076,6 +1109,24 @@ footer {
 .team-member__img {
   display: block;
   height: auto;
+}
+
+@media screen and (min-width: 480px) {
+  .team-member__img {
+    width: 450px;
+  }
+}
+
+@media screen and (min-width: 768px) {
+  .team-member__img {
+    width: 354px;
+  }
+}
+
+@media screen and (min-width: 1200px) {
+  .team-member__img {
+    width: 270px;
+  }
 }
 
 .member__name {
