--- a/scss/layouts/_features.scss
+++ b/scss/layouts/_features.scss
@@ -14,26 +14,29 @@
 
   @include mq(tablet) {
     margin-right: 30px;
-
-    &:nth-child(2n) {
-      margin-right: 0px;
-    }
+    width: 354px;
+    flex-basis: calc((100% - 2 * 30px) / 2);
   }
 
+ @include mq(tablet-only) {
+  &:nth-child(2n) {
+  margin-right: 0px;
+}
+ }
   @include mq(mobile) {
     width: 450px;
     margin-bottom: 30px;
   }
 
-  @include mq(tablet) {
-    width: 354px;
-    flex-basis: calc((100% - 2 * 30px) / 2);
-  }
 
   @include mq(desktop) {
     width: 270px;
-    flex-basis: calc((100% - 3 * 30px) / 4);
+    flex-basis: calc((100% - 4 * 30px) / 4);
     margin-bottom: 0;
+
+    &:last-child {
+      margin-right: 0;
+    }
   }
 }
 
