--- a/scss/layouts/_team.scss
+++ b/scss/layouts/_team.scss
@@ -23,8 +23,23 @@
 }
 
 .team-member__item {
-    width: 270px;
+
+    @include mq(mobile) {
+    margin-bottom: 30px;
+    }
+
+    @include mq(tablet) {
     margin-right: 30px;
+
+    &:nth-child(2n) {
+        margin-right: 0;
+    }
+    }
+
+    @include mq(desktop) {
+    margin-right: 30px;
+    }
+
     box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 1px 1px rgba(0, 0, 0, 0.14),
         0px 2px 1px rgba(0, 0, 0, 0.2);
     border-radius: 0px 0px 4px 4px;
@@ -32,9 +47,20 @@
     list-style: none;
 
    
-    &:nth-child(2n) {
+    &:last-child {
         margin-right: 0px;
     }
+
+@include mq(mobile) {
+    width: 450px;
+}
+
+@include mq(tablet) {
+    width: 354px;
+}
+
+    @include mq(desktop) {
+         width: 270px;}
 }
 
 .member {
@@ -45,6 +71,18 @@
 .team-member__img {
     display: block;
     height: auto;
+
+    @include mq(mobile) {
+        width: 450px;
+    }
+
+    @include mq(tablet) {
+     width: 354px;
+         }
+
+                                   @include mq(desktop) {
+                                       width: 270px;
+                                   }
 }
 
 .member__name {
