--- a/css/main.css
+++ b/css/main.css
@@ -1029,12 +1029,23 @@ footer {
 /*Секція команда*/
 .team-member__title {
   font-weight: 700;
-  font-size: 36px;
   line-height: 1.17;
   text-align: center;
   letter-spacing: 0.03em;
   margin-bottom: 50px;
   color: var(--main-txt-cl);
+}
+
+@media screen and (min-width: 480px) {
+  .team-member__title {
+    font-size: 28px;
+  }
+}
+
+@media screen and (min-width: 1200px) {
+  .team-member__title {
+    font-size: 36px;
+  }
 }
 
 @media screen and (min-width: 768px) {
@@ -1045,8 +1056,8 @@ footer {
     display: flex;
     -ms-flex-wrap: wrap;
         flex-wrap: wrap;
-    -ms-flex-preferred-size: calc((100%-3*30px)/4);
-        flex-basis: calc((100%-3*30px)/4);
+    -ms-flex-preferred-size: calc((100%-3 * 30px) / 4);
+        flex-basis: calc((100%-3 * 30px) / 4);
   }
 }
 
@@ -1064,7 +1075,7 @@ footer {
   }
 }
 
-@media screen and (min-width: 768px) {
+@media screen and (min-width: 768px) and (max-width: 1199.98px) {
   .team-member__item {
     margin-right: 30px;
   }
@@ -1149,27 +1160,44 @@ footer {
 }
 
 /*Постійні клієнти*/
-.customers {
-  padding-top: 94px;
-  padding-bottom: 94px;
-}
-
 .customers__list {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
-  -webkit-box-align: center;
-      -ms-flex-align: center;
-          align-items: center;
-  -webkit-box-pack: center;
-      -ms-flex-pack: center;
-          justify-content: center;
+  margin: -15px 0;
   cursor: pointer;
 }
 
 .customers__item {
   list-style: none;
-  margin-right: 30px;
+}
+
+@media screen and (min-width: 480px) {
+  .customers__item {
+    width: 210px;
+    -ms-flex-wrap: wrap;
+        flex-wrap: wrap;
+    -ms-flex-preferred-size: calc((100% - 2 * 30px) / 2);
+        flex-basis: calc((100% - 2 * 30px) / 2);
+    margin-right: 30px;
+  }
+  .customers__item:nth-child(2n) {
+    margin-right: 0;
+  }
+}
+
+@media screen and (min-width: 768px) {
+  .customers__item {
+    width: 226px;
+    -ms-flex-preferred-size: calc((100% - 3 * 30px) / 3);
+        flex-basis: calc((100% - 3 * 30px) / 3);
+  }
+}
+
+@media screen and (min-width: 1200px) {
+  .customers__item {
+    width: 170px;
+  }
 }
 
 .customers__item:last-child {
