--- a/scss/layouts/_customers.scss
+++ b/scss/layouts/_customers.scss
@@ -1,60 +1,75 @@
 /*Постійні клієнти*/
-.customers {
-    padding-top: 94px;
-    padding-bottom: 94px;
-}
 
 .customers__list {
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    cursor: pointer;
+  display: flex;
+  margin: -15px 0;
+  cursor: pointer;
 }
 
 .customers__item {
-    list-style: none;
+  list-style: none;
+  
+
+  @include mq(mobile) {
+    width: 210px;
+    flex-wrap: wrap;
+
+    flex-basis: calc((100% - 2 * 30px) / 2);
     margin-right: 30px;
 
-    &:last-child {
-    margin-right: 0;
+    &:nth-child(2n) {
+        margin-right: 0;
     }
+  }
+
+  @include mq(tablet) {
+  width: 226px;
+  flex-basis: calc((100% - 3 * 30px) / 3)
+  }
+
+  @include mq(desktop) {
+  width: 170px;
+  }
+
+  &:last-child { 
+    margin-right: 0;
+  }
 }
 
 .customers__icon {
-    background-position: center;
-    align-items: center;
-    justify-content: center;
+  background-position: center;
+  align-items: center;
+  justify-content: center;
 }
 
 .customers__link {
-    display: flex;
-    width: 170px;
-    height: 92px;
-    align-items: center;
-    justify-content: center;
-    cursor: pointer;
-    border: 1px solid var(--secondary-border-cl);
-    border-radius: 4px;
-    background-position: center;
+  display: flex;
+  width: 170px;
+  height: 92px;
+  align-items: center;
+  justify-content: center;
+  cursor: pointer;
+  border: 1px solid var(--secondary-border-cl);
+  border-radius: 4px;
+  background-position: center;
 
-    fill: var(--secondary-border-cl);
-    transition: fill var(--cubic-bezier),
-    border-color var(--cubic-bezier);
+  fill: var(--secondary-border-cl);
+  transition: fill var(--cubic-bezier), border-color var(--cubic-bezier);
 
-    &:hover,
-    &:focus {
+  &:hover,
+  &:focus {
     border: 1px solid var(--accent-txt-cl);
     fill: var(--accent-txt-cl);
-    }
+  }
 }
 
 .customers__title {
-    font-weight: 700;
-    font-size: 36px;
-    line-height: 1.17;
-    text-align: center;
-    letter-spacing: 0.03em;
-    margin-bottom: 50px;
+  font-weight: 700;
+  font-size: 36px;
+  line-height: 1.17;
+  text-align: center;
+  letter-spacing: 0.03em;
+  margin-bottom: 50px;
 
-    color: var(--main-txt-cl);
+  color: var(--main-txt-cl);
 }
