--- a/scss/layouts/_customers.scss
+++ b/scss/layouts/_customers.scss
@@ -2,7 +2,8 @@
 
 .customers__list {
   display: flex;
-  margin: -15px 0;
+  flex-wrap: wrap;
+  margin: 0 -15px;
   cursor: pointer;
 }
 
@@ -12,12 +13,14 @@
 
   @include mq(mobile) {
     width: 210px;
-    flex-wrap: wrap;
+    
 
     flex-basis: calc((100% - 2 * 30px) / 2);
     margin-right: 30px;
+  }
 
-    &:nth-child(2n) {
+  @include mq(mobile-only) {
+  &:nth-child(2n) {
         margin-right: 0;
     }
   }
