--- a/css/main.css
+++ b/css/main.css
@@ -57,6 +57,10 @@ ul {
   list-style: none;
 }
 
+.section.team {
+  background-color: var(--secondary-bg-color);
+}
+
 @media screen and (min-width: 480px) {
   .section {
     padding-top: 60px;
@@ -83,10 +87,6 @@ ul {
   .section.product {
     display: block;
   }
-}
-
-.section.product .section.team {
-  background-color: var(--secondary-bg-color);
 }
 
 .container {
@@ -1164,39 +1164,54 @@ footer {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
-  margin: -15px 0;
-  cursor: pointer;
+  -ms-flex-wrap: wrap;
+      flex-wrap: wrap;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+}
+
+@media screen and (max-width: 767.98px) {
+  .customers__list {
+    margin: -15px;
+  }
 }
 
 .customers__item {
   list-style: none;
 }
 
-@media screen and (min-width: 480px) {
+@media screen and (max-width: 767.98px) {
   .customers__item {
-    width: 210px;
-    -ms-flex-wrap: wrap;
-        flex-wrap: wrap;
     -ms-flex-preferred-size: calc((100% - 2 * 30px) / 2);
         flex-basis: calc((100% - 2 * 30px) / 2);
     margin-right: 30px;
+    margin-bottom: 30px;
   }
   .customers__item:nth-child(2n) {
     margin-right: 0;
   }
 }
 
-@media screen and (min-width: 768px) {
+@media screen and (min-width: 768px) and (max-width: 1199.98px) {
   .customers__item {
-    width: 226px;
     -ms-flex-preferred-size: calc((100% - 3 * 30px) / 3);
         flex-basis: calc((100% - 3 * 30px) / 3);
+    margin-right: 30px;
+    margin-bottom: 30px;
+  }
+  .customers__item:nth-child(-n + 4) {
+    margin-right: 0;
+  }
+  .customers__item:not(:nth-child(3n)) {
+    margin-right: 30px;
   }
 }
 
 @media screen and (min-width: 1200px) {
   .customers__item {
     width: 170px;
+    margin-right: 30px;
   }
 }
 
@@ -1218,7 +1233,6 @@ footer {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
-  width: 170px;
   height: 92px;
   -webkit-box-align: center;
       -ms-flex-align: center;
@@ -1242,12 +1256,23 @@ footer {
 
 .customers__title {
   font-weight: 700;
-  font-size: 36px;
   line-height: 1.17;
   text-align: center;
   letter-spacing: 0.03em;
   margin-bottom: 50px;
   color: var(--main-txt-cl);
+}
+
+@media screen and (min-width: 480px) {
+  .customers__title {
+    font-size: 28px;
+  }
+}
+
+@media screen and (min-width: 1200px) {
+  .customers__title {
+    font-size: 36px;
+  }
 }
 
 /*Portfolio*/
