--- a/scss/layouts/_customers.scss
+++ b/scss/layouts/_customers.scss
@@ -3,38 +3,46 @@
 .customers__list {
   display: flex;
   flex-wrap: wrap;
-  margin: 0 -15px;
-  cursor: pointer;
+  justify-content: center;
+
+  @include mq(mobile-only) {
+    margin: -15px;
+  }
 }
 
 .customers__item {
   list-style: none;
-  
-
-  @include mq(mobile) {
-    width: 210px;
-    
-
-    flex-basis: calc((100% - 2 * 30px) / 2);
-    margin-right: 30px;
-  }
 
   @include mq(mobile-only) {
-  &:nth-child(2n) {
-        margin-right: 0;
+    flex-basis: calc((100% - 2 * 30px) / 2);
+    margin-right: 30px;
+    margin-bottom: 30px;
+
+    &:nth-child(2n) {
+      margin-right: 0;
     }
   }
 
-  @include mq(tablet) {
-  width: 226px;
-  flex-basis: calc((100% - 3 * 30px) / 3)
+  @include mq(tablet-only) {
+    flex-basis: calc((100% - 3 * 30px) / 3);
+    margin-right: 30px;
+    margin-bottom: 30px;
+
+    &:nth-child(-n + 4) {
+      margin-right: 0;
+    }
+
+    &:not(:nth-child(3n)) {
+      margin-right: 30px;
+    }
   }
 
   @include mq(desktop) {
-  width: 170px;
+    width: 170px;
+    margin-right: 30px;
   }
 
-  &:last-child { 
+  &:last-child {
     margin-right: 0;
   }
 }
@@ -47,7 +55,6 @@
 
 .customers__link {
   display: flex;
-  width: 170px;
   height: 92px;
   align-items: center;
   justify-content: center;
@@ -68,11 +75,18 @@
 
 .customers__title {
   font-weight: 700;
-  font-size: 36px;
   line-height: 1.17;
   text-align: center;
   letter-spacing: 0.03em;
   margin-bottom: 50px;
+
+  @include mq(mobile) {
+    font-size: 28px;
+  }
+
+  @include mq(desktop) {
+    font-size: 36px;
+  }
 
   color: var(--main-txt-cl);
 }
