--- a/css/main.css
+++ b/css/main.css
@@ -64,18 +64,21 @@ ul {
 @media screen and (min-width: 480px) {
   .section {
     padding-top: 60px;
+    padding-bottom: 60px;
   }
 }
 
 @media screen and (min-width: 768px) {
   .section {
     padding-top: 60px;
+    padding-bottom: 60px;
   }
 }
 
 @media screen and (min-width: 1200px) {
   .section {
     padding-top: 94px;
+    padding-bottom: 94px;
   }
 }
 
@@ -149,30 +152,8 @@ ul {
   max-width: 1600px;
 }
 
-.container-sign-up {
-  margin-left: 93px;
-}
-
 .portfolio {
   background-color: var(--main-bg-cl);
-}
-
-footer {
-  padding-top: 60px;
-  padding-bottom: 60px;
-}
-
-.footer {
-  background-color: var(--dark-bg-cl);
-}
-
-.footer-container {
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  -webkit-box-align: baseline;
-      -ms-flex-align: baseline;
-          align-items: baseline;
 }
 
 /* Button */
@@ -356,13 +337,23 @@ footer {
 .logo {
   font-family: 'Raleway', sans-serif;
   font-weight: 700;
-  font-size: 26px;
   line-height: 1.19;
   letter-spacing: 0.03em;
   font-style: normal;
   text-decoration: none;
-  margin-right: 94px;
   color: var(--accent-txt-cl);
+}
+
+@media screen and (min-width: 480px) {
+  .logo {
+    font-size: 24px;
+  }
+}
+
+@media screen and (min-width: 1200px) {
+  .logo {
+    font-size: 26px;
+  }
 }
 
 .logo__black {
@@ -371,11 +362,6 @@ footer {
 
 .studio-white {
   color: var(--white-color);
-}
-
-.footer-logo {
-  display: block;
-  margin-bottom: 20px;
 }
 
 /*Модальне вікно*/
@@ -1173,12 +1159,20 @@ footer {
 
 @media screen and (max-width: 767.98px) {
   .customers__list {
-    margin: -15px;
+    margin-right: -15px;
+    margin-left: -15px;
+  }
+}
+
+@media screen and (max-width: 767.98px) {
+  .customers__list:nth-last-child(-n+2) {
+    margin-bottom: 0;
   }
 }
 
 .customers__item {
   list-style: none;
+  height: 92px;
 }
 
 @media screen and (max-width: 767.98px) {
@@ -1186,10 +1180,12 @@ footer {
     -ms-flex-preferred-size: calc((100% - 2 * 30px) / 2);
         flex-basis: calc((100% - 2 * 30px) / 2);
     margin-right: 30px;
-    margin-bottom: 30px;
   }
   .customers__item:nth-child(2n) {
     margin-right: 0;
+  }
+  .customers__item:nth-child(-n + 4) {
+    margin-bottom: 30px;
   }
 }
 
@@ -1198,10 +1194,10 @@ footer {
     -ms-flex-preferred-size: calc((100% - 3 * 30px) / 3);
         flex-basis: calc((100% - 3 * 30px) / 3);
     margin-right: 30px;
-    margin-bottom: 30px;
   }
-  .customers__item:nth-child(-n + 4) {
+  .customers__item:nth-child(-n + 3) {
     margin-right: 0;
+    margin-bottom: 30px;
   }
   .customers__item:not(:nth-child(3n)) {
     margin-right: 30px;
@@ -1259,19 +1255,20 @@ footer {
   line-height: 1.17;
   text-align: center;
   letter-spacing: 0.03em;
-  margin-bottom: 50px;
   color: var(--main-txt-cl);
 }
 
 @media screen and (min-width: 480px) {
   .customers__title {
     font-size: 28px;
+    margin-bottom: 30px;
   }
 }
 
 @media screen and (min-width: 1200px) {
   .customers__title {
     font-size: 36px;
+    margin-bottom: 50px;
   }
 }
 
@@ -1385,6 +1382,41 @@ footer {
 }
 
 /*Footer*/
+footer {
+  padding-top: 60px;
+  padding-bottom: 60px;
+}
+
+.footer {
+  background-color: var(--dark-bg-cl);
+}
+
+@media screen and (min-width: 768px) {
+  .footer-container {
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -ms-flex-wrap: wrap;
+        flex-wrap: wrap;
+    -webkit-box-align: baseline;
+        -ms-flex-align: baseline;
+            align-items: baseline;
+    -webkit-box-pack: center;
+        -ms-flex-pack: center;
+            justify-content: center;
+  }
+}
+
+@media screen and (min-width: 1200px) {
+  .footer-container {
+    -ms-flex-wrap: nowrap;
+        flex-wrap: nowrap;
+    -webkit-box-pack: left;
+        -ms-flex-pack: left;
+            justify-content: left;
+  }
+}
+
 .footer .mail,
 .footer .phone {
   font-size: 14px;
@@ -1421,6 +1453,34 @@ footer {
   margin-bottom: 9px;
 }
 
+@media screen and (max-width: 767.98px) {
+  .footer-block {
+    width: 100%;
+    text-align: center;
+    margin-bottom: 60px;
+  }
+}
+
+@media screen and (min-width: 768px) and (max-width: 1199.98px) {
+  .footer-block {
+    width: 232px;
+    margin-right: 165px;
+    text-align: center;
+  }
+}
+
+@media screen and (min-width: 1200px) {
+  .footer-block {
+    text-align: left;
+    margin-right: 70px;
+  }
+}
+
+.footer-logo {
+  display: inline-block;
+  margin-bottom: 20px;
+}
+
 .join-title {
   font-weight: 700;
   font-size: 14px;
@@ -1432,13 +1492,43 @@ footer {
   color: var(--white-color);
 }
 
-.footer .join-us {
-  display: block;
-  -webkit-box-align: baseline;
-      -ms-flex-align: baseline;
-          align-items: baseline;
-  margin-left: 70px;
-  margin-right: 0;
+@media screen and (min-width: 480px) {
+  .join-title {
+    text-align: center;
+  }
+}
+
+@media screen and (min-width: 1200px) {
+  .join-title {
+    text-align: left;
+  }
+}
+
+@media screen and (max-width: 767.98px) {
+  .footer .join-us {
+    margin-bottom: 60px;
+  }
+}
+
+@media screen and (min-width: 1200px) {
+  .footer .join-us {
+    text-align: left;
+  }
+}
+
+.container-sign-up {
+  width: 100%;
+  text-align: center;
+  margin-top: 60px;
+}
+
+@media screen and (min-width: 1200px) {
+  .container-sign-up {
+    width: auto;
+    margin-left: auto;
+    text-align: left;
+    margin-top: 0;
+  }
 }
 
 .sign-up {
@@ -1450,21 +1540,27 @@ footer {
   color: var(--white-color);
 }
 
-.sign-up-label {
-  width: 358px;
-  height: 50px;
-  margin-right: 12px;
+@media screen and (min-width: 1200px) {
+  .sign-up-label {
+    width: 358px;
+    height: 50px;
+    margin-right: 12px;
+  }
 }
 
-.form-sign-up {
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  margin-top: 20px;
+@media screen and (min-width: 1200px) {
+  .form-sign-up {
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-align: baseline;
+        -ms-flex-align: baseline;
+            align-items: baseline;
+    margin-top: 20px;
+  }
 }
 
 .sign-up-input {
-  width: 358px;
   height: 50px;
   padding: 15px 16px;
   border: 1px solid rgba(255, 255, 255, 0.3);
@@ -1475,6 +1571,31 @@ footer {
   cursor: pointer;
   -webkit-transition: border var(--cubic-bezier);
   transition: border var(--cubic-bezier);
+}
+
+@media screen and (min-width: 480px) {
+  .sign-up-input {
+    display: block;
+    width: 100%;
+    margin-top: 20px;
+    margin-bottom: 20px;
+  }
+}
+
+@media screen and (min-width: 768px) {
+  .sign-up-input {
+    width: 450px;
+    margin-right: auto;
+    margin-left: auto;
+  }
+}
+
+@media screen and (min-width: 1200px) {
+  .sign-up-input {
+    width: 358px;
+    margin-right: 12px;
+    margin-left: 0;
+  }
 }
 
 .sign-up-input:hover, .sign-up-input:focus {
