--- a/scss/layouts/_customers.scss
+++ b/scss/layouts/_customers.scss
@@ -6,30 +6,42 @@
   justify-content: center;
 
   @include mq(mobile-only) {
-    margin: -15px;
+    margin-right: -15px;
+    margin-left: -15px;
   }
+
+   @include mq(mobile-only) {
+    &:nth-last-child(-n+2) {
+      margin-bottom: 0;
+    }
+   }
+
 }
 
 .customers__item {
   list-style: none;
+  height: 92px;
 
   @include mq(mobile-only) {
     flex-basis: calc((100% - 2 * 30px) / 2);
     margin-right: 30px;
-    margin-bottom: 30px;
 
     &:nth-child(2n) {
       margin-right: 0;
+    }
+
+    &:nth-child(-n + 4) {
+      margin-bottom: 30px;
     }
   }
 
   @include mq(tablet-only) {
     flex-basis: calc((100% - 3 * 30px) / 3);
     margin-right: 30px;
-    margin-bottom: 30px;
 
-    &:nth-child(-n + 4) {
+    &:nth-child(-n + 3) {
       margin-right: 0;
+      margin-bottom: 30px;
     }
 
     &:not(:nth-child(3n)) {
@@ -78,14 +90,15 @@
   line-height: 1.17;
   text-align: center;
   letter-spacing: 0.03em;
-  margin-bottom: 50px;
 
   @include mq(mobile) {
     font-size: 28px;
+    margin-bottom: 30px;
   }
 
   @include mq(desktop) {
     font-size: 36px;
+    margin-bottom: 50px;
   }
 
   color: var(--main-txt-cl);
