--- a/css/main.css
+++ b/css/main.css
@@ -341,6 +341,7 @@ ul {
   letter-spacing: 0.03em;
   font-style: normal;
   text-decoration: none;
+  margin-right: 94px;
   color: var(--accent-txt-cl);
 }
 
@@ -390,11 +391,8 @@ ul {
 .modal {
   position: absolute;
   top: 50%;
-  left: 50%;
   -webkit-transform: translate(-50%, -50%) scale(1);
           transform: translate(-50%, -50%) scale(1);
-  width: 528px;
-  min-height: 581px;
   padding: 40px;
   border-radius: 4px;
   background-color: var(--white-bg-cl);
@@ -402,6 +400,30 @@ ul {
           box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 1px 1px rgba(0, 0, 0, 0.14), 0px 2px 1px rgba(0, 0, 0, 0.2);
   -webkit-transition: opacity var(--cubic-bezier);
   transition: opacity var(--cubic-bezier);
+}
+
+@media screen and (min-width: 480px) {
+  .modal {
+    left: 47%;
+  }
+}
+
+@media screen and (min-width: 1200px) {
+  .modal {
+    left: 50%;
+  }
+}
+
+@media screen and (min-width: 480px) {
+  .modal {
+    width: 450px;
+  }
+}
+
+@media screen and (min-width: 1200px) {
+  .modal {
+    width: 528px;
+  }
 }
 
 .close-modal {
@@ -649,6 +671,19 @@ ul {
   border-bottom: 1px solid var(--border-cl);
 }
 
+@media screen and (max-width: 767.98px) {
+  .header {
+    padding: 16px;
+    margin-left: 15px;
+  }
+}
+
+@media screen and (max-width: 767.98px) {
+  .navigation {
+    display: none;
+  }
+}
+
 .navigation__list {
   display: -webkit-box;
   display: -ms-flexbox;
@@ -683,35 +718,51 @@ ul {
   color: var(--accent-txt-cl);
 }
 
-.auth-nav.item,
-.auth-nav.list {
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  margin-left: 50px;
-  -webkit-box-pack: center;
-      -ms-flex-pack: center;
-          justify-content: center;
-  -webkit-box-align: center;
-      -ms-flex-align: center;
-          align-items: center;
+@media screen and (min-width: 1200px) {
+  .auth-nav.item,
+  .auth-nav.list {
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    margin-left: 50px;
+    -webkit-box-pack: center;
+        -ms-flex-pack: center;
+            justify-content: center;
+    -webkit-box-align: center;
+        -ms-flex-align: center;
+            align-items: center;
+  }
 }
 
-.auth-nav .item {
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  -webkit-box-align: baseline;
-      -ms-flex-align: baseline;
-          align-items: baseline;
-}
-
-.auth-nav .item + .item {
-  margin-left: 50px;
+@media screen and (min-width: 1200px) {
+  .auth-nav .item {
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-align: baseline;
+        -ms-flex-align: baseline;
+            align-items: baseline;
+  }
+  .auth-nav .item + .item {
+    margin-left: 50px;
+  }
 }
 
 .auth-nav.list {
   margin-left: auto;
+}
+
+@media screen and (max-width: 767.98px) {
+  .auth-nav.list {
+    display: none;
+  }
+}
+
+@media screen and (min-width: 768px) and (max-width: 1199.98px) {
+  .auth-nav.list {
+    padding-top: 21px;
+    padding-bottom: 21px;
+  }
 }
 
 /*Header Address*/
@@ -842,16 +893,27 @@ ul {
 
 .hero-title {
   font-weight: 900;
-  font-size: 44px;
-  line-height: 1.36;
   text-align: center;
   letter-spacing: 0.06em;
   text-transform: uppercase;
   margin-bottom: 30px;
-  width: 696px;
   margin-right: auto;
   margin-left: auto;
   color: var(--white-color);
+}
+
+@media screen and (min-width: 480px) {
+  .hero-title {
+    font-size: 26px;
+    line-height: 1.62;
+  }
+}
+
+@media screen and (min-width: 1200px) {
+  .hero-title {
+    font-size: 44px;
+    line-height: 1.36;
+  }
 }
 
 /*Секція Features*/
