--- a/scss/components/_modal-form.scss
+++ b/scss/components/_modal-form.scss
@@ -1,243 +1,252 @@
 /*Модальне вікно*/
 .backdrop {
-    position: fixed;
-    top: 0;
-    left: 0;
-    width: 100%;
-    height: 100%;
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
 
-    opacity: 1;
-    transition: opacity var(--cubic-bezier);
-    background: rgba(0, 0, 0, 0.2);
+  opacity: 1;
+  transition: opacity var(--cubic-bezier);
+  background: rgba(0, 0, 0, 0.2);
 }
 
 .backdrop.is-hidden {
-    opacity: 0;
-    pointer-events: none;
+  opacity: 0;
+  pointer-events: none;
 
-    & .modal {
+  & .modal {
     transform: translate(-50%, -50%) scale(0.9);
-    }
+  }
 }
 
 .modal {
-    position: absolute;
-    top: 50%;
-    left: 50%;
-    transform: translate(-50%, -50%) scale(1);
+  position: absolute;
+  top: 50%;
+  
+@include mq(mobile) {
+left: 47%;
+}
+  @include mq(desktop) {
+      left: 50%;
+  }
+  transform: translate(-50%, -50%) scale(1);
 
+  @include mq(mobile) {
+    width: 450px;
+  }
+
+  @include mq(desktop) {
     width: 528px;
-    min-height: 581px;
-    padding: 40px;
-    border-radius: 4px;
-    background-color: var(--white-bg-cl);
-    box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 1px 1px rgba(0, 0, 0, 0.14),
+  }
+ 
+  padding: 40px;
+  border-radius: 4px;
+  background-color: var(--white-bg-cl);
+  box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 1px 1px rgba(0, 0, 0, 0.14),
     0px 2px 1px rgba(0, 0, 0, 0.2);
-    transition: opacity var(--cubic-bezier);
+  transition: opacity var(--cubic-bezier);
 }
 
 .close-modal {
-    position: absolute;
-    top: 8px;
-    right: 8px;
-    width: 30px;
-    height: 30px;
-    background-color: var(--white-bg-cl);
-    border: 1px solid rgba(0, 0, 0, 0.1);
-    border-radius: 50%;
-    cursor: pointer;
-    transition: border-color var(--cubic-bezier);
+  position: absolute;
+  top: 8px;
+  right: 8px;
+  width: 30px;
+  height: 30px;
+  background-color: var(--white-bg-cl);
+  border: 1px solid rgba(0, 0, 0, 0.1);
+  border-radius: 50%;
+  cursor: pointer;
+  transition: border-color var(--cubic-bezier);
 
-    &:hover,
-    &:focus {
+  &:hover,
+  &:focus {
     border-color: var(--accent-txt-cl);
-    }
+  }
 }
 
 /*Форма*/
 .modal-title {
-    display: flex;
-    justify-content: center;
-    margin-bottom: 12px;
+  display: flex;
+  justify-content: center;
+  margin-bottom: 12px;
 
-    font-weight: 700;
-    font-size: 20px;
-    line-height: 1.15;
-    text-align: center;
-    letter-spacing: 0.03em;
+  font-weight: 700;
+  font-size: 20px;
+  line-height: 1.15;
+  text-align: center;
+  letter-spacing: 0.03em;
 
-    color: var(--main-txt-cl);
+  color: var(--main-txt-cl);
 }
 
 .form-title-lable {
-    display: block;
-    width: 100%;
-    text-align: left;
-    font-size: 12px;
-    line-height: 1.17;
-    letter-spacing: 0.01em;
-    margin-bottom: 4px;
+  display: block;
+  width: 100%;
+  text-align: left;
+  font-size: 12px;
+  line-height: 1.17;
+  letter-spacing: 0.01em;
+  margin-bottom: 4px;
 
-    color: var(--secondary-txt-cl);
+  color: var(--secondary-txt-cl);
 }
 
 .comment-field {
-    display: block;
-    width: 100%;
-    height: 120px;
-    outline: none;
-    padding: 12px 16px;
-    cursor: pointer;
-    border: 1px solid rgba(33, 33, 33, 0.2);
-    border-radius: 4px;
-    resize: none;
+  display: block;
+  width: 100%;
+  height: 120px;
+  outline: none;
+  padding: 12px 16px;
+  cursor: pointer;
+  border: 1px solid rgba(33, 33, 33, 0.2);
+  border-radius: 4px;
+  resize: none;
 
-    transition: border var(--cubic-bezier);
+  transition: border var(--cubic-bezier);
 
-    &:hover,
-    &:focus {
+  &:hover,
+  &:focus {
     border-color: var(--accent-bg-cl);
     fill: var(--accent-txt-cl);
-    }
+  }
 
-    &::placeholder {
+  &::placeholder {
     font-size: 12px;
     line-height: 1.17;
     letter-spacing: 0.01em;
-    
+
     color: rgba(117, 117, 117, 0.5);
-    }
+  }
 }
 
 .modal-input {
-    display: block;
-    width: 100%;
-    height: 40px;
-    padding: 12px 16px;
-    padding-left: 42px;
-    cursor: pointer;
-    border: 1px solid rgba(33, 33, 33, 0.2);
-    border-radius: 4px;
-    outline: none;
+  display: block;
+  width: 100%;
+  height: 40px;
+  padding: 12px 16px;
+  padding-left: 42px;
+  cursor: pointer;
+  border: 1px solid rgba(33, 33, 33, 0.2);
+  border-radius: 4px;
+  outline: none;
 
-    transition: border var(--cubic-bezier);
+  transition: border var(--cubic-bezier);
 
-    &:hover,
-    &:focus {
+  &:hover,
+  &:focus {
     border-color: var(--accent-bg-cl);
     fill: var(--accent-txt-cl);
 
-    &:focus+.form-icon {
-    fill: var(--accent-txt-cl)
+    &:focus + .form-icon {
+      fill: var(--accent-txt-cl);
     }
-    }
+  }
 }
 
 .input-container {
-    position: relative;
-    display: block;
-    transition: fill var(--cubic-bezier),
-    background-color var(--cubic-bezier);
+  position: relative;
+  display: block;
+  transition: fill var(--cubic-bezier), background-color var(--cubic-bezier);
 
-    &:hover,
-    &:focus {
+  &:hover,
+  &:focus {
     border-color: var(--accent-bg-cl);
     fill: var(--accent-txt-cl);
-    }
+  }
 }
 
 .form-icon {
-    position: absolute;
-    top: 50%;
-    left: 12px;
-    fill: var(--main-txt-cl);
-    transform: translateY(-50%);
+  position: absolute;
+  top: 50%;
+  left: 12px;
+  fill: var(--main-txt-cl);
+  transform: translateY(-50%);
 }
 
 .modal-input-checkbox:hover,
 .modal-input-checkbox:focus {
-    border-color: var(--accent-bg-cl);
-    fill: var(--accent-txt-cl);
+  border-color: var(--accent-bg-cl);
+  fill: var(--accent-txt-cl);
 }
 
-
 .modal-text-checkbox {
-    font-size: 14px;
-    line-height: 1.71;
-    letter-spacing: 0.03em;
-    margin-left: 8px;
+  font-size: 14px;
+  line-height: 1.71;
+  letter-spacing: 0.03em;
+  margin-left: 8px;
 
-    color: var(--secondary-txt-cl);
+  color: var(--secondary-txt-cl);
 }
 
 .comment-label {
-    display: block;
-    text-align: left;
-    margin-bottom: 10px;
+  display: block;
+  text-align: left;
+  margin-bottom: 10px;
 }
 
 .modal-label {
-    display: block;
-    text-align: left;
-    margin-bottom: 10px;
+  display: block;
+  text-align: left;
+  margin-bottom: 10px;
 }
 
 .conditions {
-    font-size: 14px;
-    line-height: 1.71;
-    letter-spacing: 0.03em;
-    text-decoration-line: underline;
-    color: var(--accent-txt-cl);
+  font-size: 14px;
+  line-height: 1.71;
+  letter-spacing: 0.03em;
+  text-decoration-line: underline;
+  color: var(--accent-txt-cl);
 }
 
 .modal-checkbox {
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    margin-bottom: 30px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  margin-bottom: 30px;
 }
 
 .form-icon-check {
-    position: relative;
-    top: 0;
-    right: 0;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    margin-right: 8px;
-    cursor: pointer;
+  position: relative;
+  top: 0;
+  right: 0;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  margin-right: 8px;
+  cursor: pointer;
 }
 
-
 .icon-check {
-    position: absolute;
-    border: 2px solid var(--main-txt-cl);
-    border-radius: 2px;
-    cursor: pointer;
-    fill: var(--white-color);
-    transition: transform var(--cubic-bezier);
+  position: absolute;
+  border: 2px solid var(--main-txt-cl);
+  border-radius: 2px;
+  cursor: pointer;
+  fill: var(--white-color);
+  transition: transform var(--cubic-bezier);
 
-    &:hover,
-    &:focus {
+  &:hover,
+  &:focus {
     border: 2px solid var(--accent-bg-cl);
-    }
+  }
 }
 
 .modal-input-checkbox {
-    position: absolute;
-    width: 1px;
-    height: 1px;
-    margin: -1px;
-    border: 0;
-    padding: 0;
-    white-space: nowrap;
-    clip-path: inset(100%);
-    clip: rect(0 0 0 0);
-    overflow: hidden;
+  position: absolute;
+  width: 1px;
+  height: 1px;
+  margin: -1px;
+  border: 0;
+  padding: 0;
+  white-space: nowrap;
+  clip-path: inset(100%);
+  clip: rect(0 0 0 0);
+  overflow: hidden;
 
-    &:checked+.icon-check {
+  &:checked + .icon-check {
     background-color: var(--accent-bg-cl);
     transition: background-color var(--cubic-bezier);
     border: none;
-    }
+  }
 }
