--- a/scss/layouts/_header.scss
+++ b/scss/layouts/_header.scss
@@ -1,143 +1,166 @@
 /* секція header */
 
 .header {
-    background-color: var(--white-bg-cl);
-    border-bottom: 1px solid var(--border-cl);
+  @include mq(mobile-only) {
+    padding: 16px;
+    margin-left: 15px;
+  }
+
+  background-color: var(--white-bg-cl);
+  border-bottom: 1px solid var(--border-cl);
 }
 
+.navigation {
+  @include mq(mobile-only) {
+    display: none;
+  }
+}
 
 .navigation__list {
-    display: flex;
-    list-style: none;
+  display: flex;
+  list-style: none;
 }
 
 .navigation__item {
-    margin-right: 50px;
+  margin-right: 50px;
 
-    &:last-child {
-        margin-right: 0;
-    }
+  &:last-child {
+    margin-right: 0;
+  }
 }
 
 .navigation__link {
-    display: block;
-    padding-top: 32px;
-    padding-bottom: 32px;
+  display: block;
+  padding-top: 32px;
+  padding-bottom: 32px;
 
-    font-weight: 500;
-    font-size: 14px;
-    line-height: 1.14;
-    letter-spacing: 0.02em;
-    font-style: normal;
-    text-decoration: none;
+  font-weight: 500;
+  font-size: 14px;
+  line-height: 1.14;
+  letter-spacing: 0.02em;
+  font-style: normal;
+  text-decoration: none;
 
-    color: var(--main-txt-cl);
-    transition: color var(--cubic-bezier);
+  color: var(--main-txt-cl);
+  transition: color var(--cubic-bezier);
 
-    &:hover,
-    &:focus {
-        color: var(--accent-txt-cl);
-    }
+  &:hover,
+  &:focus {
+    color: var(--accent-txt-cl);
+  }
 }
 
 .auth-nav.item,
 .auth-nav.list {
+  @include mq(desktop) {
     display: flex;
     margin-left: 50px;
     justify-content: center;
     align-items: center;
+  }
 }
 
 .auth-nav .item {
+  @include mq(desktop) {
     display: flex;
     align-items: baseline;
 
-    &+.item {
-        margin-left: 50px;
+    & + .item {
+      margin-left: 50px;
     }
+  }
 }
 
 .auth-nav.list {
-    margin-left: auto;
+  @include mq(mobile-only) {
+    display: none;
+  }
+
+  @include mq(tablet-only) {
+    padding-top: 21px;
+    padding-bottom: 21px;
+  }
+
+  margin-left: auto;
 }
 
 /*Header Address*/
 .mail {
-    display: inline-flex;
-    justify-content: center;
-    align-items: baseline;
+  display: inline-flex;
+  justify-content: center;
+  align-items: baseline;
 }
 
 .phone {
-    display: inline-flex;
-    justify-content: center;
-    align-items: center;
+  display: inline-flex;
+  justify-content: center;
+  align-items: center;
 }
 
 .list .mail {
-    font-weight: 500;
-    font-size: 14px;
-    line-height: 1.14;
-    letter-spacing: 0.02em;
-    font-style: normal;
-    text-decoration: none;
-    align-items: center;
-    color: var(--secondary-txt-cl);
-    transition: color var(--cubic-bezier);
+  font-weight: 500;
+  font-size: 14px;
+  line-height: 1.14;
+  letter-spacing: 0.02em;
+  font-style: normal;
+  text-decoration: none;
+  align-items: center;
+  color: var(--secondary-txt-cl);
+  transition: color var(--cubic-bezier);
 
-    &:hover,
-    &:focus {
-        color: var(--accent-txt-cl);
-    }
+  &:hover,
+  &:focus {
+    color: var(--accent-txt-cl);
+  }
 }
 
 .list .phone {
-    font-weight: 500;
-    font-size: 14px;
-    line-height: 1.14;
-    letter-spacing: 0.02em;
-    font-style: normal;
-    text-decoration: none;
-    align-items: center;
-    color: var(--secondary-txt-cl);
-    transition: color var(--cubic-bezier);
+  font-weight: 500;
+  font-size: 14px;
+  line-height: 1.14;
+  letter-spacing: 0.02em;
+  font-style: normal;
+  text-decoration: none;
+  align-items: center;
+  color: var(--secondary-txt-cl);
+  transition: color var(--cubic-bezier);
 
-    &:hover,
-    &:focus {
-        color: var(--accent-txt-cl);
-    }
+  &:hover,
+  &:focus {
+    color: var(--accent-txt-cl);
+  }
 }
 
 .icon-envelope {
-    align-items: baseline;
-    display: flex;
-    justify-content: center;
-    margin-right: 10px;
-    fill: currentColor;
+  align-items: baseline;
+  display: flex;
+  justify-content: center;
+  margin-right: 10px;
+  fill: currentColor;
 }
 
 .icon-phone {
-    align-items: center;
-    display: flex;
-    justify-content: center;
-    margin-right: 10px;
-    fill: currentColor;
+  align-items: center;
+  display: flex;
+  justify-content: center;
+  margin-right: 10px;
+  fill: currentColor;
 }
 
 .navigation__link--active {
-    color: var(--accent-txt-cl);
-    transition: color var(--cubic-bezier);
-    position: relative;
+  color: var(--accent-txt-cl);
+  transition: color var(--cubic-bezier);
+  position: relative;
 
-    &::after {
-        content: '';
-        display: block;
-        width: 100%;
-        height: 4px;
-        border-radius: 2px;
-        position: absolute;
-        left: 0;
-        bottom: 0;
-        background-color: var(--accent-bg-cl);
-    }
+  &::after {
+    content: '';
+    display: block;
+    width: 100%;
+    height: 4px;
+    border-radius: 2px;
+    position: absolute;
+    left: 0;
+    bottom: 0;
+    background-color: var(--accent-bg-cl);
+  }
 }
