--- a/scss/layouts/_hero.scss
+++ b/scss/layouts/_hero.scss
@@ -1,33 +1,40 @@
 /*Секція герой*/
 
 .hero {
-    max-width: 1600px;
-    text-align: center;
-    padding-top: 200px;
-    padding-bottom: 200px;
-    margin-left: auto;
-    margin-right: auto;
+  max-width: 1600px;
+  text-align: center;
+  padding-top: 200px;
+  padding-bottom: 200px;
+  margin-left: auto;
+  margin-right: auto;
 
-    background-color: var(--dark-bg-cl);
-    background-image: linear-gradient(to right, rgba(47, 48, 58, 0.4), rgba(47, 48, 58, 0.4)),
+  background-color: var(--dark-bg-cl);
+  background-image: linear-gradient(to right, rgba(47, 48, 58, 0.4), rgba(47, 48, 58, 0.4)),
     url(../images/bg-image/bcg-hero.jpg);
-    background-repeat: no-repeat;
-    background-position: center;
-    background-size: cover;
+  background-repeat: no-repeat;
+  background-position: center;
+  background-size: cover;
 }
 
 .hero-title {
-    font-weight: 900;
+  @include mq(mobile) {
+    font-size: 26px;
+    line-height: 1.62;
+  }
+
+  @include mq(desktop) {
     font-size: 44px;
     line-height: 1.36;
-    text-align: center;
-    letter-spacing: 0.06em;
-    text-transform: uppercase;
+  }
 
-    margin-bottom: 30px;
-    width: 696px;
-    margin-right: auto;
-    margin-left: auto;
+  font-weight: 900;
+  text-align: center;
+  letter-spacing: 0.06em;
+  text-transform: uppercase;
 
-    color: var(--white-color);
+  margin-bottom: 30px;
+  margin-right: auto;
+  margin-left: auto;
+
+  color: var(--white-color);
 }
