--- a/scss/components/_logo.scss
+++ b/scss/components/_logo.scss
@@ -12,10 +12,11 @@
     font-size: 24px;
   }
 
-  @include mq(tablet) {
-    margin-right: 94px;
+  @include mq(tablet-only) {
+    padding-right: 80px;
+    padding-top: 26px;
+    padding-bottom: 26px;
   }
-
   @include mq(desktop) {
     font-size: 26px;
     margin-right: 94px;
