--- a/css/main.css
+++ b/css/main.css
@@ -241,6 +241,9 @@ ul {
   .nav-btn__item {
     margin-bottom: 15px;
   }
+  .nav-btn__item:nth-last-child(-n+2) {
+    margin-bottom: 0;
+  }
 }
 
 .nav-btn__item:last-child {
@@ -1404,6 +1407,17 @@ ul {
   list-style: none;
 }
 
+@media screen and (min-width: 768px) and (max-width: 1199.98px) {
+  .services {
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -ms-flex-wrap: wrap;
+        flex-wrap: wrap;
+    margin: -15px;
+  }
+}
+
 .services-title {
   font-weight: 700;
   font-size: 18px;
@@ -1429,7 +1443,6 @@ ul {
 }
 
 .services-link {
-  display: block;
   list-style: none;
   text-decoration: none;
   -webkit-transition: -webkit-box-shadow var(--cubic-bezier);
@@ -1438,23 +1451,42 @@ ul {
   transition: box-shadow var(--cubic-bezier), -webkit-box-shadow var(--cubic-bezier);
 }
 
+@media screen and (max-width: 767.98px) {
+  .services-link {
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: column;
+            flex-direction: column;
+  }
+}
+
+@media screen and (min-width: 1200px) {
+  .services-link {
+    display: block;
+  }
+}
+
 .services-link:hover, .services-link:focus {
   -webkit-box-shadow: 0px 1px 1px rgba(0, 0, 0, 0.12), 0px 4px 4px rgba(0, 0, 0, 0.06), 1px 4px 6px rgba(0, 0, 0, 0.16);
           box-shadow: 0px 1px 1px rgba(0, 0, 0, 0.12), 0px 4px 4px rgba(0, 0, 0, 0.06), 1px 4px 6px rgba(0, 0, 0, 0.16);
 }
 
-@media screen and (min-width: 480px) {
+@media screen and (max-width: 767.98px) {
   .services-item {
-    width: 450px;
+    width: 100%;
+  }
+  .services-item:not(:last-child) {
+    margin-bottom: 30px;
   }
 }
 
 @media screen and (min-width: 768px) and (max-width: 1199.98px) {
   .services-item {
-    -ms-flex-preferred-size: calc(100% / 2 - 30px);
-        flex-basis: calc(100% / 2 - 30px);
-    margin-right: 15px;
-    margin-bottom: 30px;
+    width: calc((100% - 2 * 30px))/2;
+    margin: 15px;
   }
   .services-item:nth-last-child(-n + 2) {
     margin-bottom: 0;
@@ -1467,6 +1499,7 @@ ul {
 .services-img {
   display: block;
   max-width: 100%;
+  height: auto;
 }
 
 .thumb-text {
