--- a/scss/layouts/servives.scss
+++ b/scss/layouts/servives.scss
@@ -1,12 +1,15 @@
 /*Portfolio*/
 .services {
   list-style: none;
+  display: flex;
+  justify-content: center;
+  align-items: center;
 
-  @include mq(tablet-only) {
-    display: flex;
+  @include mq(tablet) {
     flex-wrap: wrap;
+    min-height: 400px;
     margin: -15px;
-  }
+    }
 }
 
 .services-title {
@@ -43,6 +46,7 @@
   @include mq(mobile-only) {
     display: flex;
     flex-direction: column;
+    width: 100%;
   }
 
   @include mq(desktop) {
@@ -66,7 +70,7 @@
   }
 
   @include mq(tablet-only) {
-    width: calc((100% - 2 * 30px)) / 2;
+    flex-basis: calc((100% - 2 * 30px) / 2);
     margin: 15px;
 
     &:nth-last-child(-n + 2) {
@@ -78,9 +82,9 @@
     }
   }
 
-  @include mq(desktop-only) {
-    flex-basis: calc(100% / 3 - 30px);
-    margin-right: 30px;
+  @include mq(desktop) {
+    flex-basis: calc((100% - 3 * 15px) / 2);
+    margin-right: 15px;
     margin-bottom: 30px;
 
     &:nth-last-child(-n + 3) {
