--- a/css/main.css
+++ b/css/main.css
@@ -135,7 +135,18 @@ ul {
   }
 }
 
-.header__container,
+.header__container {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+}
+
 .navigation__container {
   display: -webkit-box;
   display: -ms-flexbox;
@@ -377,9 +388,11 @@ ul {
   }
 }
 
-@media screen and (min-width: 768px) {
+@media screen and (min-width: 768px) and (max-width: 1199.98px) {
   .logo {
-    margin-right: 94px;
+    padding-right: 80px;
+    padding-top: 26px;
+    padding-bottom: 26px;
   }
 }
 
@@ -1405,9 +1418,12 @@ ul {
 /*Portfolio*/
 .services {
   list-style: none;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
 }
 
-@media screen and (min-width: 768px) and (max-width: 1199.98px) {
+@media screen and (min-width: 768px) {
   .services {
     display: -webkit-box;
     display: -ms-flexbox;
@@ -1449,23 +1465,27 @@ ul {
   transition: -webkit-box-shadow var(--cubic-bezier);
   transition: box-shadow var(--cubic-bezier);
   transition: box-shadow var(--cubic-bezier), -webkit-box-shadow var(--cubic-bezier);
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
 }
 
 @media screen and (max-width: 767.98px) {
   .services-link {
-    display: -webkit-box;
-    display: -ms-flexbox;
-    display: flex;
-    -webkit-box-orient: vertical;
-    -webkit-box-direction: normal;
-        -ms-flex-direction: column;
-            flex-direction: column;
+    width: 100%;
   }
 }
 
 @media screen and (min-width: 1200px) {
   .services-link {
     display: block;
+    -webkit-box-flex: 1;
+        -ms-flex-positive: 1;
+            flex-grow: 1;
   }
 }
 
@@ -1485,13 +1505,29 @@ ul {
 
 @media screen and (min-width: 768px) and (max-width: 1199.98px) {
   .services-item {
-    width: calc((100% - 2 * 30px))/2;
+    -ms-flex-preferred-size: calc((100% - 2 * 30px) / 2);
+        flex-basis: calc((100% - 2 * 30px) / 2);
     margin: 15px;
   }
   .services-item:nth-last-child(-n + 2) {
     margin-bottom: 0;
   }
   .services-item:nth-child(2n) {
+    margin-right: 0;
+  }
+}
+
+@media screen and (min-width: 1200px) {
+  .services-item {
+    -ms-flex-preferred-size: calc((100% - 3 * 30px) / 3);
+        flex-basis: calc((100% - 3 * 30px) / 3);
+    margin-right: 15px;
+    margin-bottom: 30px;
+  }
+  .services-item:nth-last-child(-n + 3) {
+    margin-bottom: 0;
+  }
+  .services-item:nth-child(3n) {
     margin-right: 0;
   }
 }
