--- a/scss/main.scss
+++ b/scss/main.scss
@@ -15,12 +15,13 @@
 
 //layouts
 @import './layouts/header';
+@import './layouts/menu';
 @import './layouts/hero';
 @import './layouts/features';
 @import './layouts/product';
 @import './layouts/team';
 @import './layouts/customers';
-@import './layouts/servives.scss';
+@import './layouts/services';
 @import './layouts/footer';
 
 //Mobile
