--- a/scss/components/_logo.scss
+++ b/scss/components/_logo.scss
@@ -10,8 +10,8 @@
 
   @include mq(mobile) {
     font-size: 24px;
-    padding: 16px;
-    margin-left: 15px;
+    padding-top: 16px;
+    padding-bottom: 16px;
   }
 
   @include mq(tablet-only) {
