--- a/scss/layouts/_menu.scss
+++ b/scss/layouts/_menu.scss
@@ -35,8 +35,8 @@
   @include mq(mobile-only) {
     &.is-open {
       display: block;
-      width: 480px;
-      height: 796px;
+      width: 100%;
+      height: 100%;
 
       .logo {
         z-index: 1;
