--- a/scss/layouts/_services.scss
+++ b/scss/layouts/_services.scss
@@ -63,9 +63,9 @@
   flex-direction: column;
   }
 
-  @include mq(desktop) {
+ /* @include mq(desktop) {
     display: block;
-  }
+  }*/
 
   &:hover,
   &:focus {
@@ -94,6 +94,10 @@
 
     &:nth-child(2n) {
       margin-right: 0;
+    }
+
+    &:last-child {
+      justify-content: flex-start;
     }
   }
 
