--- a/scss/layouts/_team.scss
+++ b/scss/layouts/_team.scss
@@ -29,7 +29,8 @@
 
 .team-member__item {
   @include mq(mobile) {
-    margin-bottom: 30px;
+    &:not(:last-child) {
+    margin-bottom: 30px;}
   }
 
   @include mq(tablet-only) {
