--- a/scss/layouts/_team.scss
+++ b/scss/layouts/_team.scss
@@ -28,16 +28,22 @@
 }
 
 .team-member__item {
-  @include mq(mobile) {
+  @include mq(mobile-only) {
     &:not(:last-child) {
-    margin-bottom: 30px;}
+    margin-bottom: 30px;
+  }
   }
 
   @include mq(tablet-only) {
     margin-right: 30px;
 
+&:nth-child(-n+2) {
+    margin-bottom: 30px;
+}
+
     &:nth-child(2n) {
       margin-right: 0;
+      
     }
   }
 
