--- a/scss/layouts/_features.scss
+++ b/scss/layouts/_features.scss
@@ -18,19 +18,19 @@
     flex-basis: calc((100% - 2 * 30px) / 2);
   }
 
- @include mq(tablet-only) {
-  &:nth-child(2n) {
-  margin-right: 0px;
-}
- }
-  @include mq(mobile) {
+  @include mq(mobile-only) {
     width: 450px;
-  &:not(:last-child) {
-    margin-bottom: 30px;
-  }
-  }
 
-    
+    &:not(:last-child) {
+      margin-bottom: 30px;
+    }
+  }
+  
+  @include mq(tablet-only) {
+    &:nth-child(2n) {
+      margin-right: 0px;
+    }
+  }
 
   @include mq(desktop) {
     width: 270px;
