--- a/scss/layouts/_header.scss
+++ b/scss/layouts/_header.scss
@@ -13,14 +13,16 @@
 .navigation {
   @include mq(mobile-only) {
     display: none;
-    margin-left: 88px;
+    
   }
 }
-
 
 .navigation__list {
   display: flex;
   list-style: none;
+
+  @include mq(tablet-only){
+  margin-left: 88px;}
 }
 
 .navigation__item {
