--- a/scss/layouts/_menu.scss
+++ b/scss/layouts/_menu.scss
@@ -35,11 +35,11 @@
   @include mq(mobile-only) {
     &.is-open {
       display: block;
-      width: 100%;
-      height: 100%;
+      width: 480px;
+      height: 796px;
 
       .logo {
-        z-index: 1;
+        z-index: 2;
       }
 
       background-color: var(--white-bg-cl);
