--- a/scss/layouts/_menu.scss
+++ b/scss/layouts/_menu.scss
@@ -11,11 +11,16 @@
 
   &.is-open .icon-cross {
     display: block;
+    @include mq(mobile-only) {
+        position: relative;
+      }
   }
 
   &.is-open .icon-menu {
     display: none;
   }
+
+  
 
   @include mq(tablet) {
     display: none;
@@ -29,19 +34,15 @@
   left: 0;
   width: 100%;
   height: 100%;
-  z-index: 2;
+  z-index: 8;
   padding: 48px 40px;
 
   @include mq(mobile-only) {
     &.is-open {
       display: block;
-      width: 480px;
+      width: 100vw;
       height: 796px;
-
-      .logo {
-        z-index: 2;
-      }
-
+      z-index: 9;
       background-color: var(--white-bg-cl);
     }
   }
