--- a/css/main.css
+++ b/css/main.css
@@ -61,7 +61,7 @@ ul {
   background-color: var(--secondary-bg-color);
 }
 
-@media screen and (min-width: 480px) {
+@media screen and (max-width: 767.98px) {
   .section {
     padding-top: 60px;
     padding-bottom: 60px;
@@ -99,33 +99,15 @@ ul {
   margin-right: auto;
 }
 
-@media screen and (min-width: 480px) {
+@media screen and (max-width: 767.98px) {
   .container {
-    width: 480px;
-  }
-}
-
-@media screen and (min-width: 480px) {
-  .container {
-    width: 480px;
+    width: 100%;
   }
 }
 
 @media screen and (min-width: 768px) {
   .container {
     width: 768px;
-  }
-}
-
-@media screen and (min-width: 768px) {
-  .container {
-    width: 768px;
-  }
-}
-
-@media screen and (min-width: 1200px) {
-  .container {
-    width: 1200px;
   }
 }
 
@@ -408,7 +390,7 @@ ul {
   color: var(--accent-txt-cl);
 }
 
-@media screen and (min-width: 480px) {
+@media screen and (max-width: 767.98px) {
   .logo {
     font-size: 24px;
     padding-top: 16px;
@@ -418,6 +400,10 @@ ul {
 
 @media screen and (min-width: 768px) and (max-width: 1199.98px) {
   .logo {
+    font-weight: 700;
+    font-size: 24px;
+    line-height: 28px;
+    letter-spacing: 0.03em;
     padding-top: 26px;
     padding-bottom: 26px;
   }
@@ -487,27 +473,23 @@ ul {
   transition: opacity var(--cubic-bezier);
 }
 
-@media screen and (min-width: 480px) {
-  .modal {
-    left: 47%;
-  }
-}
-
-@media screen and (min-width: 1200px) {
+@media screen and (max-width: 767.98px) {
   .modal {
     left: 50%;
+    width: 450px;
   }
 }
 
-@media screen and (min-width: 480px) {
+@media screen and (min-width: 768px) {
   .modal {
-    width: 450px;
+    left: 50%;
   }
 }
 
 @media screen and (min-width: 1200px) {
   .modal {
     width: 528px;
+    left: 50%;
   }
 }
 
@@ -754,6 +736,12 @@ ul {
 .header {
   background-color: var(--white-bg-cl);
   border-bottom: 1px solid var(--border-cl);
+}
+
+@media screen and (max-width: 767.98px) {
+  .header {
+    width: 100%;
+  }
 }
 
 @media screen and (min-width: 768px) and (max-width: 1199.98px) {
@@ -1032,28 +1020,32 @@ ul {
 
 .menu-container {
   display: none;
-  position: absolute;
-  top: 100%;
-  left: 0;
-  width: 100%;
-  height: 100%;
-  z-index: 8;
-  padding: 48px 40px;
 }
 
 @media screen and (max-width: 767.98px) {
   .menu-container.is-open {
     display: block;
-    width: 100vw;
-    height: 796px;
-    z-index: 9;
+    position: absolute;
+    top: 100%;
+    left: 0;
+    padding: 48px 40px;
+    width: 100%;
+    height: 800px;
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: column;
+            flex-direction: column;
+    z-index: 2;
     background-color: var(--white-bg-cl);
   }
 }
 
+.menu-block {
+  margin-bottom: 302px;
+}
+
 .menu-content {
   padding-right: auto;
-  margin-bottom: 302px;
 }
 
 .menu-content__link {
@@ -1153,7 +1145,7 @@ ul {
   background-image: -webkit-gradient(linear, left top, right top, from(rgba(47, 48, 58, 0.4)), to(rgba(47, 48, 58, 0.4))), url("../images/bg-image/bcg-hero_sm.jpg");
   background-image: linear-gradient(to right, rgba(47, 48, 58, 0.4), rgba(47, 48, 58, 0.4)), url("../images/bg-image/bcg-hero_sm.jpg");
   background-repeat: no-repeat;
-  background-position: center;
+  background-position: center top;
   background-size: cover;
 }
 
@@ -1203,7 +1195,14 @@ ul {
   color: var(--white-color);
 }
 
-@media screen and (min-width: 480px) {
+@media screen and (max-width: 767.98px) {
+  .hero-title {
+    font-size: 26px;
+    line-height: 1.62;
+  }
+}
+
+@media screen and (min-width: 768px) and (max-width: 1199.98px) {
   .hero-title {
     font-size: 26px;
     line-height: 1.62;
@@ -1228,7 +1227,7 @@ ul {
     -webkit-box-pack: center;
         -ms-flex-pack: center;
             justify-content: center;
-    margin: 0 -15px;
+    margin: -15px;
   }
 }
 
@@ -1236,18 +1235,9 @@ ul {
   list-style: none;
 }
 
-@media screen and (min-width: 768px) {
-  .feature__item {
-    margin-right: 30px;
-    width: 354px;
-    -ms-flex-preferred-size: calc((100% - 2 * 30px) / 2);
-        flex-basis: calc((100% - 2 * 30px) / 2);
-  }
-}
-
 @media screen and (max-width: 767.98px) {
   .feature__item {
-    width: 450px;
+    width: 100%;
   }
   .feature__item:not(:last-child) {
     margin-bottom: 30px;
@@ -1255,8 +1245,16 @@ ul {
 }
 
 @media screen and (min-width: 768px) and (max-width: 1199.98px) {
-  .feature__item:nth-child(2n) {
-    margin-right: 0px;
+  .feature__item {
+    width: 354px;
+    -ms-flex-preferred-size: calc((100% - 2 * 30px) / 2);
+        flex-basis: calc((100% - 2 * 30px) / 2);
+  }
+  .feature__item:nth-child(-n+2) {
+    margin-bottom: 30px;
+  }
+  .feature__item:nth-child(odd) {
+    margin-right: 30px;
   }
 }
 
@@ -1265,6 +1263,7 @@ ul {
     width: 270px;
     -ms-flex-preferred-size: calc((100% - 4 * 30px) / 4);
         flex-basis: calc((100% - 4 * 30px) / 4);
+    margin-right: 30px;
     margin-bottom: 0;
   }
   .feature__item:last-child {
@@ -1284,6 +1283,7 @@ ul {
           justify-content: center;
   background-color: var(--secondary-bg-color);
   background-position: center;
+  height: 120px;
   margin-bottom: 30px;
 }
 
@@ -1387,7 +1387,13 @@ ul {
   color: var(--main-txt-cl);
 }
 
-@media screen and (min-width: 480px) {
+@media screen and (max-width: 767.98px) {
+  .team-member__title {
+    font-size: 28px;
+  }
+}
+
+@media screen and (min-width: 768px) and (max-width: 1199.98px) {
   .team-member__title {
     font-size: 28px;
   }
@@ -1430,7 +1436,7 @@ ul {
   .team-member__item {
     margin-right: 30px;
   }
-  .team-member__item:nth-child(-n+2) {
+  .team-member__item:nth-child(-n + 2) {
     margin-bottom: 30px;
   }
   .team-member__item:nth-child(2n) {
@@ -1448,9 +1454,9 @@ ul {
   margin-right: 0px;
 }
 
-@media screen and (min-width: 480px) {
+@media screen and (max-width: 767.98px) {
   .team-member__item {
-    width: 450px;
+    width: 100%;
   }
 }
 
@@ -1477,9 +1483,9 @@ ul {
   width: 100%;
 }
 
-@media screen and (min-width: 480px) {
+@media screen and (max-width: 767.98px) {
   .team-member__img {
-    width: 450px;
+    width: 100%;
   }
 }
 
@@ -1524,13 +1530,6 @@ ul {
   -webkit-box-pack: center;
       -ms-flex-pack: center;
           justify-content: center;
-}
-
-@media screen and (max-width: 767.98px) {
-  .customers__list {
-    margin-right: -15px;
-    margin-left: -15px;
-  }
 }
 
 @media screen and (max-width: 767.98px) {
@@ -1627,7 +1626,14 @@ ul {
   color: var(--main-txt-cl);
 }
 
-@media screen and (min-width: 480px) {
+@media screen and (max-width: 767.98px) {
+  .customers__title {
+    font-size: 28px;
+    margin-bottom: 30px;
+  }
+}
+
+@media screen and (min-width: 768px) and (max-width: 1199.98px) {
   .customers__title {
     font-size: 28px;
     margin-bottom: 30px;
@@ -1647,9 +1653,6 @@ ul {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
-  -webkit-box-align: center;
-      -ms-flex-align: center;
-          align-items: center;
   -webkit-box-pack: center;
       -ms-flex-pack: center;
           justify-content: center;
@@ -1675,6 +1678,14 @@ ul {
   }
 }
 
+@media screen and (min-width: 768px) and (max-width: 1199.98px) {
+  .services {
+    -webkit-box-pack: start;
+        -ms-flex-pack: start;
+            justify-content: flex-start;
+  }
+}
+
 .services-title {
   font-weight: 700;
   font-size: 18px;
@@ -1692,7 +1703,7 @@ ul {
   border-left: 1px solid var(--main-border-cl);
 }
 
-@media screen and (min-width: 768px) and (max-width: 1199.98px) {
+@media screen and (min-width: 768px) {
   .services-list {
     -webkit-box-flex: 1;
         -ms-flex-positive: 1;
@@ -1718,9 +1729,6 @@ ul {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
-  /* @include mq(desktop) {
-    display: block;
-  }*/
 }
 
 @media screen and (max-width: 767.98px) {
@@ -1732,7 +1740,7 @@ ul {
   }
 }
 
-@media screen and (min-width: 768px) and (max-width: 1199.98px) {
+@media screen and (min-width: 768px) {
   .services-link {
     -webkit-box-orient: vertical;
     -webkit-box-direction: normal;
@@ -1757,6 +1765,9 @@ ul {
 
 @media screen and (min-width: 768px) and (max-width: 1199.98px) {
   .services-item {
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
     -ms-flex-preferred-size: calc((100% - 2 * 30px) / 2);
         flex-basis: calc((100% - 2 * 30px) / 2);
     margin: 15px;
@@ -1764,28 +1775,19 @@ ul {
   .services-item:nth-last-child(-n + 2) {
     margin-bottom: 0;
   }
-  .services-item:nth-child(2n) {
-    margin-right: 0;
-  }
-  .services-item:last-child {
-    -webkit-box-pack: start;
-        -ms-flex-pack: start;
-            justify-content: flex-start;
-  }
 }
 
 @media screen and (min-width: 1200px) {
   .services-item {
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
     -ms-flex-preferred-size: calc((100% - 3 * 30px) / 3);
         flex-basis: calc((100% - 3 * 30px) / 3);
-    margin-right: 15px;
-    margin-bottom: 30px;
+    margin: 15px;
   }
   .services-item:nth-last-child(-n + 3) {
     margin-bottom: 0;
-  }
-  .services-item:nth-child(3n) {
-    margin-right: 0;
   }
 }
 
@@ -1941,7 +1943,13 @@ footer {
   color: var(--white-color);
 }
 
-@media screen and (min-width: 480px) {
+@media screen and (max-width: 767.98px) {
+  .join-title {
+    text-align: center;
+  }
+}
+
+@media screen and (min-width: 768px) and (max-width: 1199.98px) {
   .join-title {
     text-align: center;
   }
@@ -1968,7 +1976,12 @@ footer {
 .container-sign-up {
   width: 100%;
   text-align: center;
-  margin-top: 60px;
+}
+
+@media screen and (min-width: 768px) {
+  .container-sign-up {
+    margin-top: 60px;
+  }
 }
 
 @media screen and (min-width: 1200px) {
@@ -2022,7 +2035,7 @@ footer {
   transition: border var(--cubic-bezier);
 }
 
-@media screen and (min-width: 480px) {
+@media screen and (max-width: 767.98px) {
   .sign-up-input {
     display: block;
     width: 100%;
@@ -2036,6 +2049,10 @@ footer {
     width: 450px;
     margin-right: auto;
     margin-left: auto;
+    display: block;
+    width: 100%;
+    margin-top: 20px;
+    margin-bottom: 20px;
   }
 }
 
