--- a/scss/base/_common.scss
+++ b/scss/base/_common.scss
@@ -3,7 +3,7 @@
 }
 
 .section {
-  @include mq(mobile) {
+  @include mq(mobile-only) {
     padding-top: 60px;
     padding-bottom: 60px;
   }
@@ -32,24 +32,13 @@
   margin-left: auto;
   margin-right: auto;
 
-  @media screen and (min-width: 480px) {
-    width: 480px;
-  }
 
-  @include mq(mobile) {
-    width: 480px;
-  }
-
-  @media screen and (min-width: 768px) {
-    width: 768px;
+  @include mq(mobile-only) {
+    width: 100%;
   }
 
   @include mq(tablet) {
     width: 768px;
-  }
-
-  @media screen and (min-width: 1200px) {
-    width: 1200px;
   }
 
   @include mq(desktop) {
