--- a/scss/components/_modal-form.scss
+++ b/scss/components/_modal-form.scss
@@ -23,29 +23,27 @@
 .modal {
   position: absolute;
   top: 50%;
-  
-@include mq(mobile) {
-left: 47%;
-}
-  @include mq(desktop) {
-      left: 50%;
-  }
   transform: translate(-50%, -50%) scale(1);
-
-  @include mq(mobile) {
-    width: 450px;
-  }
-
-  @include mq(desktop) {
-    width: 528px;
-  }
- 
   padding: 40px;
   border-radius: 4px;
   background-color: var(--white-bg-cl);
   box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 1px 1px rgba(0, 0, 0, 0.14),
     0px 2px 1px rgba(0, 0, 0, 0.2);
   transition: opacity var(--cubic-bezier);
+
+  @include mq(mobile-only) {
+    left: 50%;
+    width: 450px;
+  }
+
+  @include mq(tablet) {
+    left: 50%;
+  }
+
+  @include mq(desktop) {
+    width: 528px;
+    left: 50%;
+  }
 }
 
 .close-modal {
