--- a/scss/layouts/_features.scss
+++ b/scss/layouts/_features.scss
@@ -5,36 +5,40 @@
     display: flex;
     flex-wrap: wrap;
     justify-content: center;
-    margin: 0 -15px;
+    margin: -15px;
   }
 }
 
 .feature__item {
   list-style: none;
 
-  @include mq(tablet) {
-    margin-right: 30px;
-    width: 354px;
-    flex-basis: calc((100% - 2 * 30px) / 2);
-  }
 
   @include mq(mobile-only) {
-    width: 450px;
-
-    &:not(:last-child) {
-      margin-bottom: 30px;
-    }
-  }
+      width: 100%;
   
-  @include mq(tablet-only) {
-    &:nth-child(2n) {
-      margin-right: 0px;
+      &:not(:last-child) {
+        margin-bottom: 30px;
+      }
     }
+
+  @include mq(tablet-only) {
+    width: 354px;
+    flex-basis: calc((100% - 2 * 30px) / 2);
+   
+    &:nth-child(-n+2) {
+    margin-bottom: 30px;
   }
+
+    &:nth-child(odd) {
+      margin-right: 30px;
+    }
+   
+}
 
   @include mq(desktop) {
     width: 270px;
     flex-basis: calc((100% - 4 * 30px) / 4);
+    margin-right: 30px;
     margin-bottom: 0;
 
     &:last-child {
@@ -49,6 +53,7 @@
   justify-content: center;
   background-color: var(--secondary-bg-color);
   background-position: center;
+  height: 120px;
 
   margin-bottom: 30px;
 }
