--- a/scss/layouts/_menu.scss
+++ b/scss/layouts/_menu.scss
@@ -12,15 +12,13 @@
   &.is-open .icon-cross {
     display: block;
     @include mq(mobile-only) {
-        position: relative;
-      }
+      position: relative;
+    }
   }
 
   &.is-open .icon-menu {
     display: none;
   }
-
-  
 
   @include mq(tablet) {
     display: none;
@@ -29,28 +27,30 @@
 
 .menu-container {
   display: none;
-  position: absolute;
-  top: 100%;
-  left: 0;
-  width: 100%;
-  height: 100%;
-  z-index: 8;
-  padding: 48px 40px;
+  
 
   @include mq(mobile-only) {
     &.is-open {
       display: block;
-      width: 100vw;
-      height: 796px;
-      z-index: 9;
+      position: absolute;
+      top: 100%;
+      left: 0;
+      padding: 48px 40px;
+      width: 100%;
+      height: 800px;
+      flex-direction: column;
+      z-index: 2;
       background-color: var(--white-bg-cl);
     }
   }
 }
 
+.menu-block {
+  margin-bottom: 302px;
+}
+
 .menu-content {
   padding-right: auto;
-  margin-bottom: 302px;
 
   &__link {
     color: var(--main-txt-cl);
@@ -95,22 +95,21 @@
     letter-spacing: 0.02em;
 
     color: var(--accent-txt-cl);
-    
   }
 }
 
- .menu-contacts__mail {
-   font-weight: 500;
-   font-size: 24px;
-   line-height: 1.17;
-   letter-spacing: 0.02em;
+.menu-contacts__mail {
+  font-weight: 500;
+  font-size: 24px;
+  line-height: 1.17;
+  letter-spacing: 0.02em;
 
-   color: var(--secondary-txt-cl);
- }
+  color: var(--secondary-txt-cl);
+}
 
- .menu-contacts__list {
-   margin-bottom: 32px;
- }
+.menu-contacts__list {
+  margin-bottom: 32px;
+}
 
 .menu-socials {
   display: flex;
