--- a/scss/layouts/_team.scss
+++ b/scss/layouts/_team.scss
@@ -9,7 +9,11 @@
 
   color: var(--main-txt-cl);
 
-  @include mq(mobile) {
+  @include mq(mobile-only) {
+    font-size: 28px;
+  }
+
+  @include mq(tablet-only) {
     font-size: 28px;
   }
 
@@ -30,20 +34,19 @@
 .team-member__item {
   @include mq(mobile-only) {
     &:not(:last-child) {
-    margin-bottom: 30px;
-  }
+      margin-bottom: 30px;
+    }
   }
 
   @include mq(tablet-only) {
     margin-right: 30px;
 
-&:nth-child(-n+2) {
-    margin-bottom: 30px;
-}
+    &:nth-child(-n + 2) {
+      margin-bottom: 30px;
+    }
 
     &:nth-child(2n) {
       margin-right: 0;
-      
     }
   }
 
@@ -61,8 +64,8 @@
     margin-right: 0px;
   }
 
-  @include mq(mobile) {
-    width: 450px;
+  @include mq(mobile-only) {
+    width: 100%;
   }
 
   @include mq(tablet) {
@@ -84,8 +87,8 @@
   height: auto;
   width: 100%;
 
-  @include mq(mobile) {
-    width: 450px;
+  @include mq(mobile-only) {
+    width: 100%;
   }
 
   @include mq(tablet) {
