--- a/scss/layouts/_footer.scss
+++ b/scss/layouts/_footer.scss
@@ -161,12 +161,11 @@ footer {
     margin-bottom: 20px;
   }
 
-  @include mq(tablet) {
+  @include mq(tablet-only) {
     width: 450px;
     margin-right: auto;
     margin-left: auto;
     display: block;
-    width: 100%;
     margin-top: 20px;
     margin-bottom: 20px;
   }
