--- a/css/main.css
+++ b/css/main.css
@@ -2044,13 +2044,12 @@ footer {
   }
 }
 
-@media screen and (min-width: 768px) {
+@media screen and (min-width: 768px) and (max-width: 1199.98px) {
   .sign-up-input {
     width: 450px;
     margin-right: auto;
     margin-left: auto;
     display: block;
-    width: 100%;
     margin-top: 20px;
     margin-bottom: 20px;
   }
