--- a/scss/base/_common.scss
+++ b/scss/base/_common.scss
@@ -27,24 +27,21 @@
   }
 }
 .container {
-  padding-left: 15px;
-  padding-right: 15px;
-  margin-left: auto;
-  margin-right: auto;
+  padding: 0px 15px;
+  margin: 0 auto;
+  width: 100%;
 
-
-  @include mq(mobile-only) {
-    width: 100%;
-  }
-
-  @include mq(tablet) {
-    width: 768px;
-  }
-
-  @include mq(desktop) {
-    width: 1200px;
-  }
-
+  @media screen and (min-width: 480px) {
+      width: 480px;
+    }
+  
+    @media screen and (min-width: 768px) {
+      width: 768px;
+    }
+  
+    @media screen and (min-width: 1200px) {
+      width: 1200px;
+    }
 }
 
 .header__container {
