--- a/scss/layouts/_features.scss
+++ b/scss/layouts/_features.scss
@@ -1,12 +1,19 @@
 /*Секція Features*/
 
 .feature__list {
-  @include mq(tablet) {
+  @include mq(tablet-only) {
     display: flex;
     flex-wrap: wrap;
     justify-content: center;
     margin: -15px;
   }
+
+    @include mq(desktop) {
+      display: flex;
+      flex-wrap: wrap;
+      justify-content: center;
+    }
+
 }
 
 .feature__item {
@@ -23,7 +30,7 @@
 
   @include mq(tablet-only) {
     width: 354px;
-    flex-basis: calc((100% - 2 * 30px) / 2);
+    flex-basis: calc((100% - 1 * 30px) / 2);
    
     &:nth-child(-n+2) {
     margin-bottom: 30px;
@@ -37,7 +44,7 @@
 
   @include mq(desktop) {
     width: 270px;
-    flex-basis: calc((100% - 4 * 30px) / 4);
+    flex-basis: calc((100% - 3 * 30px) / 4);
     margin-right: 30px;
     margin-bottom: 0;
 
